@@ -93,7 +93,7 @@ public class GatewayConnector {
                     IntStream.rangeClosed('A', 'Z').boxed()
                 ),
                 IntStream.rangeClosed('0', '9').boxed()
-            ).collect(Collectors.toList())
+            ).toList()
         );
     }
 
@@ -161,8 +161,9 @@ public class GatewayConnector {
         this.disconnectRunnable = disconnectRunnable;
         initialSyncInProgress = true;
 
+
         LOG.fine("Gateway connector starting: Gateway ID=" + gatewayId);
-        assetProcessingService.sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.CONNECTING), AttributeEvent.Source.GATEWAY);
+        sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.CONNECTING));
 
         // Reinitialise state
         syncProcessorFuture = null;
@@ -199,7 +200,7 @@ public class GatewayConnector {
         // Wait a short while to disconnect to allow disconnect message to be delivered
         LOG.fine("Gateway connector disconnected: Gateway ID=" + gatewayId);
         executorService.schedule(disconnectRunnable, 1, TimeUnit.SECONDS);
-        assetProcessingService.sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISCONNECTED), AttributeEvent.Source.GATEWAY);
+        sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISCONNECTED));
     }
 
     public boolean isConnected() {
@@ -234,11 +235,15 @@ public class GatewayConnector {
                 disconnect();
             }
             LOG.fine("Gateway connector disabled: Gateway ID=" + gatewayId);
-            assetProcessingService.sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISABLED), AttributeEvent.Source.GATEWAY);
+            sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISABLED));
         } else {
             LOG.info("Gateway connector enabled: Gateway ID=" + gatewayId);
-            assetProcessingService.sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISCONNECTED), AttributeEvent.Source.GATEWAY);
+            sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISCONNECTED));
         }
+    }
+
+    protected void sendAttributeEvent(AttributeEvent event) {
+        assetProcessingService.sendAttributeEvent(event, GatewayService.class.getName());
     }
 
     synchronized protected void onGatewayEvent(String messageId, SharedEvent e) {
@@ -485,8 +490,9 @@ public class GatewayConnector {
 
         // Delete obsolete assets
         List<String> obsoleteLocalAssetIds = localAssets.stream()
-            .filter(localAsset -> !syncAssetIds.contains(mapAssetId(gatewayId, localAsset.getId(), true)))
-            .map(Asset::getId).collect(Collectors.toList());
+            .map(Asset::getId)
+            .filter(id -> !syncAssetIds.contains(mapAssetId(gatewayId, id, true)))
+            .toList();
 
         if (!obsoleteLocalAssetIds.isEmpty()) {
             boolean deleted = deleteAssetsLocally(obsoleteLocalAssetIds);
@@ -500,7 +506,7 @@ public class GatewayConnector {
         initialSyncInProgress = false;
         cachedAssetEvents.clear();
         cachedAttributeEvents.clear();
-        assetProcessingService.sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.CONNECTED), AttributeEvent.Source.GATEWAY);
+        sendAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.CONNECTED));
     }
 
     @SuppressWarnings("unchecked")
@@ -587,7 +593,7 @@ public class GatewayConnector {
                 throw new IllegalStateException(msg);
             }
 
-            List<String> originalIds = assetIds.stream().map(id -> mapAssetId(gatewayId, id, true)).collect(Collectors.toList());
+            List<String> originalIds = assetIds.stream().map(id -> mapAssetId(gatewayId, id, true)).toList();
 
             pendingAssetDelete.set(new EventRequestResponseWrapper<>(
                 UniqueIdentifierGenerator.generateId(),
@@ -634,13 +640,9 @@ public class GatewayConnector {
     synchronized protected void onAssetEvent(AssetEvent e) {
 
         switch (e.getCause()) {
-
-            case CREATE:
-            case READ:
-            case UPDATE:
+            case CREATE, READ, UPDATE -> {
                 String assetId = e.getId();
                 Asset<?> mergedAsset = saveAssetLocally(e.getAsset());
-
                 synchronized (pendingAssetMerges) {
                     if (pendingAssetMerges.containsKey(assetId)) {
                         @SuppressWarnings("OptionalGetWithoutIsPresent")
@@ -648,30 +650,27 @@ public class GatewayConnector {
                         String id = pendingAssetMergeEntry.getKey();
                         pendingAssetMergeEntry.setValue(mergedAsset);
 
-                        //noinspection SynchronizationOnLocalVariableOrMethodParameter
+                        //noinspection
                         synchronized (id) {
                             // Notify the waiting merge thread
                             id.notify();
                         }
                     }
                 }
-                break;
-            case DELETE:
+            }
+            case DELETE -> {
                 try {
                     deleteAssetsLocally(Collections.singletonList(mapAssetId(gatewayId, e.getId(), false)));
                 } catch (Exception ex) {
                     LOG.log(Level.SEVERE, "Removing obsolete asset failed: " + e.getId(), ex);
                 }
-                break;
+            }
         }
     }
 
     protected void onAttributeEvent(AttributeEvent e) {
         // Just push the event through the processing chain
-        assetProcessingService.sendAttributeEvent(
-            new AttributeEvent(mapAssetId(gatewayId, e.getId(), false), e.getName(), e.getValue().orElse(null), e.getTimestamp()),
-            AttributeEvent.Source.GATEWAY
-        );
+        sendAttributeEvent(new AttributeEvent(mapAssetId(gatewayId, e.getId(), false), e.getName(), e.getValue().orElse(null), e.getTimestamp()));
     }
 
     protected <T extends Asset<?>> T saveAssetLocally(T asset) {
